--- a/myportfolio.html
+++ b/myportfolio.html
@@ -13,7 +13,7 @@
 	<!-- ------------ -->
 
 
-	<link rel="stylesheet" type="text/css" href="surveyform.css">
+	<link rel="stylesheet" type="text/css" href="myportfolio.css">
 
 <!-- googl fonts----------------- -->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
