--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		  <div class="collapse navbar-collapse" id="navbarNavDropdown">
 		    <ul class="nav">
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">About me</span></a>
+		        <a class="nav-link" href="aboutme.html">About me</span></a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="#">Contact</a>
