--- a/aboutme.html
+++ b/aboutme.html
@@ -39,13 +39,13 @@
 		    <ul class="nav ">
 		      
 		      <li class="nav-item">
-		      	<a class="nav-link" href="#"><i class="fa fa-facebook"></i></a>
+		      	<a class="nav-link" href="#" target="_blank"><i class="fa fa-facebook"></i></a>
 		      </li>
 		      <li class="nav-item">
-		      	<a class="nav-link" href="https://twitter.com/Gavkmr"><i class="fa fa-twitter"></i></a>
+		      	<a class="nav-link" href="https://twitter.com/Gavkmr" target="_blank"><i class="fa fa-twitter"></i></a>
 		      </li>
 		      <li class="nav-item">
-		      	<a class="nav-link"href="https://www.instagram.com/invites/contact/?i=21leuyu8vi3&utm_content=5qphmts"><i class="fa fa-instagram"></i></a>
+		      	<a class="nav-link"href="https://www.instagram.com/invites/contact/?i=21leuyu8vi3&utm_content=5qphmts" target="_blank"><i class="fa fa-instagram"></i></a>
 		      </li> 
 		    </ul>
 		  </div>
