--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
 	
-	<nav class="navbar navbar-expand-sm navbar-light" style="background-color: #203647;">
+	<nav class="navbar navbar-expand-sm navbar-light" style="background-color: black;">
 	  <div class="container">
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
@@ -64,13 +64,13 @@
 		<div class="row">
 			<div class="col-4">
 				<div class="card php">
-						<img class="card-img-top rounded-circle" src="myphoto2.jpg" alt="Loading image">
+						<img class="card-img-top rounded-circle" src="photo3.jpg" alt="Loading image">
   					
 				</div>
 			</div>
 			<div class="col-8 my-auto"> 
 				<h1 style="font-size:5vw;">I'm <span>Gaurav Kumar</span></h1>
-				<h4 style="font-size:2.5vw;">Full Stack web developer</h4>
+				<h4 style="font-size:3vw;">Full Stack web developer</h4>
 			</div>
 			
 		</div>			
