--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		        <a class="nav-link" href="#">Contact</a>
 		      </li> -->
 		      <li class="nav-item">
-		      	<a class="nav-link" href="#" target="_blank"><i class="fa fa-facebook"></i></a>
+		      	<a class="nav-link" href="https://www.facebook.com/gauravronaldo77" target="_blank"><i class="fa fa-facebook"></i></a>
 		      </li>
 		      <li class="nav-item">
 		      	<a class="nav-link" href="https://twitter.com/Gavkmr" target="_blank"><i class="fa fa-twitter"></i></a>
