--- a/aboutme.html
+++ b/aboutme.html
@@ -70,11 +70,7 @@
 		   <br>
 		   <p>I'm a sophomore web developer with a year experience of html, css , javascript. 
 		   I have made some projects related to reactjs and MERN. I also have some knowledge of
-		   Python and basic C. I'm a sophomore web developer with a year experience of html, css , javascript. 
-		   I have made some projects related to reactjs and MERN. I also have some knowledge of
-		   Python and basic C.I'm a sophomore web developer with a year experience of html, css , javascript. 
-		   I have made some projects related to reactjs and MERN. I also have some knowledge of
-		   Python and basic C.</p>
+		   Python and basic C. </p>
 		  </div>
 		</div>
 	</div>
@@ -91,15 +87,12 @@
 			</div>
 		  </div>
 		  <div class="col-sm-6 mb-3 my-auto ml-4 ">
-		   <h2>MY SKILLS</h2>
+		   <h2>HOBBIES</h2>
 		   <br>
-		   <p>I'm a sophomore web developer with a year experience of html, css , javascript. 
-		   I have made some projects related to reactjs and MERN. I also have some knowledge of
-		   Python and basic C. I'm a sophomore web developer with a year experience of html, css , javascript. 
-		   I have made some projects related to reactjs and MERN. I also have some knowledge of
-		   Python and basic C.I'm a sophomore web developer with a year experience of html, css , javascript. 
-		   I have made some projects related to reactjs and MERN. I also have some knowledge of
-		   Python and basic C.</p>
+		   <p>
+		Apart from web development, i spend time watching movies and web series.
+		I like listening to songs and discussing on various topics. I am a football enthusiast and a great admirer of Cristiano Ronaldo and MS Dhoni.
+		   </p>
 		  </div>
 		</div>
 	</div>
