--- a/aboutme.html
+++ b/aboutme.html
@@ -31,11 +31,11 @@
 
 	
 	<nav class="navbar navbar-light mb-5" style="background-color: #1A0315;">
-	  <div class="container abc">
+	  <div class="container justify-content-around">
 		  <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span> -->
 		  <!-- </button> -->
-		  <div class="d-flex justify-content-center" id="navbarNavDropdown">
+		  <div class="d-flex " id="navbarNavDropdown">
 		    <ul class="nav ">
 		      
 		      <li class="nav-item">
