--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
 
 
 	
-	<nav class="navbar navbar-expand-sm navbar-light" style="background-color: black;">
+	<nav class="navbar navbar-expand-sm navbar-light mb-4" style="background-color: black;">
 	  <div class="container">
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
-		  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+		  <div class="collapse navbar-collapse justify-content-around" id="navbarNavDropdown">
 		    <ul class="nav">
 		      <li class="nav-item">
-		        <a class="nav-link" href="aboutme.html">About me</span></a>
+		        <a class="nav-link" href="aboutme.html">About</span></a>
 		      </li>
 <!-- 		      <li class="nav-item">
 		        <a class="nav-link" href="#">Contact</a>
@@ -60,7 +60,7 @@
 
 
 
-	<div class="container mb-3">
+	<div class="container my-4">
 		<div class="row">
 			<div class="col-4">
 				<div class="card php">
@@ -77,7 +77,7 @@
 	</div>
 
 
-	<div class="container mb-5" id="projectsection">
+	<div class="container my-5" id="projectsection">
 		<div id ="projects" class="text-center">
 		  <h1 >Projects</h1>
 		</div>		
