--- a/aboutme.html
+++ b/aboutme.html
@@ -30,7 +30,7 @@
 
 
 	
-	<nav class="navbar navbar-light mb-5" style="background-color: #1A0315;">
+	<nav class="navbar navbar-light mb-5" style="background-color: white;">
 	  <div class="container justify-content-around">
 		  <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span> -->
