--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 		    <div class="card" >
 		      <img class="card-img-top" src="photo2.jpg" alt="Card image cap">
 		      <div class="card-body">
-		        <h5 class="card-title">Shopping website</h5>
+		        <h5 class="card-title">Covid Care website</h5>
 		        <p class="card-text">MERN Stack Used.</p>
-		        <a href="https://sleepy-meadow-62157.herokuapp.com/" class="btn btn-primary"> Open</a>
+		        <a href="https://covidcareyt.herokuapp.com/" class="btn btn-primary"> Open</a>
 		      </div>
 		    </div>
 		  </div>
