--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 		  <h1 >Projects</h1>
 		</div>		
 		<div class="row">
-		  <div class="col-sm-6 mb-3">
+		  <div class="col-sm-4 mb-3">
 		    <div class="card" >
-		      <img class="card-img-top" src="photo2.jpg" alt="Card image cap">
+		      <img class="card-img-top" src="https://i.ibb.co/jrZdbhz/covid-care.png" alt="Card image cap">
 		      <div class="card-body">
 		        <h5 class="card-title">Covid Care website</h5>
 		        <p class="card-text">MERN Stack Used.</p>
@@ -92,7 +92,17 @@
 		      </div>
 		    </div>
 		  </div>
-		  <div class="col-sm-6 mb-3">
+		  <div class="col-sm-4 mb-3">
+		    <div class="card" >
+		      <img class="card-img-top" src="https://i.ibb.co/rkVGLg5/chat-system.png" alt="Card image cap">
+		      <div class="card-body">
+		        <h5 class="card-title">Chat System</h5>
+		        <p class="card-text">Node js used</p>
+		        <a href="https://covidcareyt.herokuapp.com/" class="btn btn-primary"> Open</a>
+		      </div>
+		    </div>
+		  </div>
+		  <div class="col-sm-4 mb-3">
 		    <div class="card">
 		      <div class="card-body">
 		        <img class="card-img-top" src="photo1.jpg" alt="Card image cap">
