--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		<div class="row">
 		  <div class="col-sm-4 mb-3">
 		    <div class="card" >
-		      <img class="card-img-top" src="https://i.ibb.co/jrZdbhz/covid-care.png" alt="Card image cap">
+		      <img class="card-img-top" src="https://i.ibb.co/qmzBLMn/chat-system11.png" alt="Card image cap">
 		      <div class="card-body">
 		        <h5 class="card-title">Covid Care website</h5>
 		        <p class="card-text">MERN Stack Used.</p>
