jquery and name pic

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
 
-	<div class="container my-4">
+<!-- 	<div class="container my-4">
 		<div class="row">
 			<div class="col-4">
 				<div class="card php">
@@ -71,6 +71,48 @@
 			<div class="col-8 my-auto"> 
 				<h1 style="font-size:5vw;">I'm <span>Gaurav Kumar</span></h1>
 				<h4 style="font-size:3vw;">Full Stack web developer</h4>
+			</div>
+			
+		</div>			
+	</div> -->
+
+
+		<div class="container my-4">
+		<div class="row">
+			<div class="col-md-4">
+				<div class="card php">
+						<!-- <img class="card-img-top rounded-circle" src="https://i.ibb.co/pXFNz2M/photo3.jpg" alt="Loading image"> -->
+					<marquee behavior="slide" direction="down" scrollamount="8" style="font-size:5vw;">
+						<img class="card-img-top rounded-circle" src="https://i.ibb.co/pXFNz2M/photo3.jpg" alt="Loading image">
+					</marquee>
+  					
+				</div>
+			</div>
+			<div class="col-md-8 my-auto"> 
+				<!-- <h1 style="font-size:5vw;">I'm <span>Gaurav Kumar</span></h1> -->
+				<marquee behavior="slide" direction="up" scrollamount="" style="font-size:5vw;">
+					I'm <span>Gaurav Kumar</span>
+				</marquee>
+
+				<!-- <marquee behavior="slide" direction="down" style="font-size:2.5vw;">
+					Full Stack web developer
+				</marquee> -->
+
+				<h4 style="font-size:2.5vw;">Full Stack web developer</h4>
+				<ul class="nav">
+					<li class="nav-item">
+				      	<a class="nav-link" href="https://www.facebook.com/gauravronaldo77"><i class="fa fa-facebook" target="_blank"></i></a>
+				      </li>
+				      <li class="nav-item">
+				      	<a class="nav-link" href="https://twitter.com/Gavkmr" target="_blank"><i class="fa fa-twitter"></i></a>
+				      </li>
+				      <li class="nav-item">
+				      	<a class="nav-link"href="https://www.instagram.com/invites/contact/?i=21leuyu8vi3&utm_content=5qphmts" target="_blank"><i class="fa fa-instagram"></i></a>
+				     </li> 
+				    <li class="nav-item">
+				      	<a class="nav-link"href="https://github.com/gavkmr2001" target="_blank"><i class="fa fa-github"></i></a>
+				     </li> 
+				</ul>
 			</div>
 			
 		</div>			
