--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			</div>
 			<div class="col-md-8 my-auto"> 
 				<!-- <h1 style="font-size:5vw;">I'm <span>Gaurav Kumar</span></h1> -->
-				<marquee behavior="slide" direction="up" scrollamount="" style="font-size:5vw;">
+				<marquee behavior="slide" direction="up" scrollamount="">
 					I'm <span>Gaurav Kumar</span>
 				</marquee>
 
@@ -98,7 +98,7 @@
 					Full Stack web developer
 				</marquee> -->
 
-				<h4 style="font-size:2.5vw;">Full Stack web developer</h4>
+				<h4 style="font-size:4vh;">Full Stack web developer</h4>
 				<ul class="nav">
 					<li class="nav-item">
 				      	<a class="nav-link" href="https://www.facebook.com/gauravronaldo77"><i class="fa fa-facebook" target="_blank"></i></a>
