--- a/index.html
+++ b/index.html
@@ -30,32 +30,24 @@
 
 
 	
-	<nav class="navbar navbar-expand-sm navbar-light mb-4" style="background-color: black;">
-	  <div class="container">
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-		    <span class="navbar-toggler-icon"></span>
-		  </button>
-		  <div class="collapse navbar-collapse justify-content-around" id="navbarNavDropdown">
-		    <ul class="nav">
-		      <li class="nav-item">
-		        <a class="nav-link" href="aboutme.html">About</span></a>
-		      </li>
-<!-- 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Contact</a>
-		      </li> -->
-		      <li class="nav-item">
-		      	<a class="nav-link" href="https://www.facebook.com/gauravronaldo77" target="_blank"><i class="fa fa-facebook"></i></a>
-		      </li>
-		      <li class="nav-item">
-		      	<a class="nav-link" href="https://twitter.com/Gavkmr" target="_blank"><i class="fa fa-twitter"></i></a>
-		      </li>
-		      <li class="nav-item">
-		      	<a class="nav-link"href="https://www.instagram.com/invites/contact/?i=21leuyu8vi3&utm_content=5qphmts" target="_blank"><i class="fa fa-instagram"></i></a>
-		      </li> 
-		    </ul>
-		  </div>
-	  </div>
-	</nav>
+	<nav class="navbar navbar-light mb-5" style="background-color: white;">
+		<div class="container justify-content-around">
+			<!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			  <span class="navbar-toggler-icon"></span> -->
+			<!-- </button> -->
+			<div class="d-flex " id="navbarNavDropdown">
+			  <ul class="nav ">
+				
+				<li class="nav-item">
+					<a class="nav-link" href="aboutme.html">About</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Resume</span></a>
+				</li>
+			  </ul>
+			</div>
+		</div>
+	  </nav>
 
 
 
