--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					Full Stack web developer
 				</marquee> -->
 
-				<h4 style="font-size:4vh;">Full Stack web developer</h4>
+				<h4>Full Stack web developer</h4>
 				<ul class="nav">
 					<li class="nav-item">
 				      	<a class="nav-link" href="https://www.facebook.com/gauravronaldo77"><i class="fa fa-facebook" target="_blank"></i></a>
