--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
 		      <div class="card-body">
 		        <h5 class="card-title">Covid Care website</h5>
 		        <p class="card-text">MERN Stack Used.</p>
-		        <a href="https://covidcareyt.herokuapp.com/" class="btn btn-primary"> Open</a>
+<!-- 		        <a href="https://covidcareyt.herokuapp.com/" class="btn btn-primary"> Open</a> -->
+			<a href="https://github.com/gavkmr2001/covid-care" class="btn btn-primary"> Open</a> 
 		      </div>
 		    </div>
 		  </div>
@@ -113,7 +114,7 @@
 		      <div class="card-body">
 		        <h5 class="card-title">Chat System</h5>
 		        <p class="card-text">Node js used</p>
-		        <a href="https://covidcareyt.herokuapp.com/" class="btn btn-primary"> Open</a>
+		        <a href="https://github.com/gavkmr2001/chat-system" class="btn btn-primary"> Open</a>
 		      </div>
 		    </div>
 		  </div>
@@ -123,7 +124,8 @@
 		        <img class="card-img-top" src="photo1.jpg" alt="Card image cap">
 		        <h5 class="card-title">Photo Gallery</h5>
 		        <p class="card-text">Node js used</p>
-		        <a href="https://polar-bastion-87144.herokuapp.com/" class="btn btn-primary">Open</a>
+<!-- 			="https://polar-bastion-87144.herokuapp.com/" -->
+		        <a href= "https://github.com/gavkmr2001/photo-gallery" class="btn btn-primary">Open</a>
 		      </div>
 		    </div>
 		  </div>
